[gd_scene load_steps=3 format=3 uid="uid://person_card_scene"]

[ext_resource type="Script" path="res://game/person_card.gd" id="1"]

[sub_resource type="QuadMesh" id="QuadMesh"]
size = Vector2(1.2, 1.6)

[node name="PersonCard" type="Node3D"]
script = ExtResource("1")

[node name="CardMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("QuadMesh")

[node name="SubViewport" type="SubViewport" parent="."]
size = Vector2i(256, 341)
render_target_update_mode = 4

[node name="TextureRect" type="Control" parent="SubViewport"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.83, 0.68, 0.21, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="SubViewport/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="AvatarTexture" type="TextureRect" parent="SubViewport/TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_vertical = 3

[node name="NameLabel" type="Label" parent="SubViewport/TextureRect/VBoxContainer"]
layout_mode = 2
text = "张三"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 32
